fix: stuck a footer to the bottom when there are no products

--- a/src/view/pages/Catalog/Catalog.module.css
+++ b/src/view/pages/Catalog/Catalog.module.css
@@ -1,6 +1,13 @@
-.catalog {
+.catalogWrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding-top: 3rem;
+  min-height: 100vh;
+  justify-content: space-between;
+
+  .catalog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3rem;
+  }
 }
